Fixed logo and navbar spacing

--- a/MVC/static/css/stylesheet.css
+++ b/MVC/static/css/stylesheet.css
@@ -7,12 +7,20 @@ body {
     background-size:100%;*/
 }
 
-h2.logo-script {
+h2#logo-script {
+    margin-top: 15px;
+    margin-bottom: 10px;
+    font-size: 35px;
     font-family: 'Pacifico', Helvetica, sans-serif; 
 }
 
 .navbar-form .form-control {
     margin: 5px;
+}
+
+form#address-form {
+    margin-left: 5px;
+
 }
 
 .navbar-default {
